Add light sensor
